--- a/build.gradle
+++ b/build.gradle
@@ -278,8 +278,14 @@ configure(allprojects) { project ->
 			cacheChangingModulesFor 0, "seconds"
 		}
 		repositories {
+			mavenLocal()
+			maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
 			mavenCentral()
 			maven { url "https://repo.spring.io/libs-spring-framework-build" }
+			jcenter()
+			maven { url "https://repo.spring.io/snapshot" }
+			maven { url "https://repo.spring.io/milestone" }
+			maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }  //转换pdf使用
 		}
 	}
 	configurations.all {
